tests/fail/struct_field_2.rs
use salak::*;

#[derive(Debug, FromEnvironment)]
pub struct FailStruct {
    value: std::cell::RefCell<u8>,
}

fn main() {}
